<resources>
    <string name="app_name">WeatherApp</string>
    <string name="menuRefresh">Refresh</string>
    <string name="menuSettings">Settings</string>
    <string name="menuAdd">Add</string>
    <string name="menuDelete">Delete</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="addCityDialogTitle">Add City</string>
    <string name="title_activity_setting">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="unit_settings_label">Unit</string>
    <string name="refresh_delay_settings_label">Refresh Delay</string>
    <string name="addCityHintText">Enter City Name…</string>
    <string name="citySettingsTabTitle">Cities</string>
    <string name="generalSettingsTabTitle">General</string>
    <string name="weatherPictureDescription">weatherSymbol</string>
    <string name="arrowDirectionNorth">N</string>
    <string name="arrowDirectionSouth">S</string>
    <string name="arrowDirectionEast">E</string>
    <string name="arrowDirectionWest">W</string>
    <string name="windPanelTitle">Wind</string>
    <string name="windPanelSpeed">Speed:</string>
    <string name="windPanelChill">Chill:</string>
    <string name="windPanelDirection">Direction:</string>
    <string name="windPanelImageDescription">Wind direction arrow</string>
    <string name="detailsPanelTitle">Details</string>
    <string name="detailsPanelPressure">Pressure:</string>
    <string name="detailsPanelHumidity">Humidity:</string>
    <string name="detailsPanelVisibility">Visibility:</string>
    <string name="mainViewEmptyMessage">Add locations to see weather</string>

    <string name="sunRise">Sunrise</string>
    <string name="sunSet">Sunset</string>
    <string name="twilightM">Twilight morning</string>
    <string name="twilightE">Twilight evening</string>
    <string name="sunFragmentTitle">Sun Information</string>
    <string name="moonFragmentTitle">Moon Information</string>
    <string name="moonriseTitle">Moonrise</string>
    <string name="moonsetTitle">Moonset</string>
    <string name="moonPhaseTitle">Illumination</string>
    <string name="moonAgeTitle">Moon age</string>
    <string name="fullmoonTitle">Full moon</string>
    <string name="newMoonTitle">New moon</string>
    <string name="azimuthTitle">Azimuth</string>
</resources>
