<RelativeLayout
    android:id="@+id/weather_fragment_wind_detail_section"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/weatherPanelBackground"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/weather_fragment_wind_panel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/windPanelTitle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSubTitleSize"
        android:textStyle="bold"
        tools:text="Wind"
        />

    <View
        style="@style/Divider"
        android:layout_below="@id/weather_fragment_wind_panel_title"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:id="@+id/weather_fragment_wind_direction_arrow"
        android:layout_width="@dimen/windDirectionWidgetSize"
        android:layout_height="@dimen/windDirectionWidgetSize"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/weather_fragment_wind_panel_title"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="7dp">

        <ImageView
            android:id="@+id/weather_fragment_wind_direction_arrow_image"
            android:layout_width="@dimen/windArrowSize"
            android:layout_height="@dimen/windArrowSize"
            android:layout_centerInParent="true"
            android:contentDescription="@string/windPanelImageDescription"
            app:srcCompat="@drawable/arrow_down"/>

        <TextView
            android:id="@+id/wind_direction_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/weather_fragment_wind_direction_arrow_image"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/arrowDirectionNorth"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textStandardSize"
            android:textStyle="bold"
            tools:text="N"/>

        <TextView
            android:id="@+id/wind_direction_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/weather_fragment_wind_direction_arrow_image"
            android:text="@string/arrowDirectionWest"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textStandardSize"
            android:textStyle="bold"
            tools:text="W"/>

        <TextView
            android:id="@+id/wind_direction_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/weather_fragment_wind_direction_arrow_image"
            android:text="@string/arrowDirectionEast"
            android:textAlignment="textEnd"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textStandardSize"
            android:textStyle="bold"
            tools:text="E"/>

        <TextView
            android:id="@+id/wind_direction_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/weather_fragment_wind_direction_arrow_image"
            android:layout_centerInParent="true"
            android:text="@string/arrowDirectionSouth"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textStandardSize"
            android:textStyle="bold"
            tools:text="S"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/weather_fagment_wind_direction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fragment_wind_panel_title"
        android:layout_marginTop="10dp"
        android:text="@string/windPanelDirection"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="Direction: "/>

    <TextView
        android:id="@+id/weather_fragment_wind_direction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fragment_wind_panel_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/weather_fagment_wind_direction_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="North"/>

    <TextView
        android:id="@+id/weather_fagment_wind_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_wind_direction_label"
        android:layout_marginTop="7dp"
        android:text="@string/windPanelSpeed"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="Speed: "/>

    <TextView
        android:id="@+id/weather_fagment_wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_wind_direction_label"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/weather_fagment_wind_speed_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="167 km/h"/>

    <TextView
        android:id="@+id/weather_fagment_wind_chill_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_wind_speed_label"
        android:layout_marginTop="7dp"
        android:layout_toStartOf="@id/weather_fagment_wind_chill_label"
        android:text="@string/windPanelChill"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="Chill:"/>

    <TextView
        android:id="@+id/weather_fagment_wind_chill_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_wind_speed_label"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/weather_fagment_wind_chill_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="50"/>


</RelativeLayout>