<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/weather_fragment_details_section"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/weatherPanelBackground"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/weather_fagment_detail_panel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/detailsPanelTitle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSubTitleSize"
        android:textStyle="bold"
        tools:text="Details"/>

    <View
        style="@style/Divider"
        android:layout_below="@id/weather_fagment_detail_panel_title"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/weather_fagment_pressure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_detail_panel_title"
        android:layout_marginTop="10dp"
        android:text="@string/detailsPanelPressure"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"/>

    <TextView
        android:id="@+id/weather_fagment_pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_detail_panel_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/weather_fagment_pressure_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="1013hpa"/>

    <TextView
        android:id="@+id/weather_fagment_humidity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_pressure_label"
        android:layout_marginTop="7dp"
        android:text="@string/detailsPanelHumidity"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="Humidity:"/>

    <TextView
        android:id="@+id/weather_fagment_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_pressure_label"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/weather_fagment_humidity_label"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="53%"/>

    <TextView
        android:id="@+id/weather_fagment_visibility_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/weather_fagment_detail_panel_title"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="2km"/>

    <TextView
        android:id="@+id/weather_fagment_visibility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_fagment_detail_panel_title"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@id/weather_fagment_visibility_value"
        android:text="@string/detailsPanelVisibility"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textStandardSize"
        tools:text="Visibility:"/>

</RelativeLayout>