<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:stretchColumns="0">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView_sunTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sunFragmentTitle"
            android:textAlignment="gravity"
            android:textColor="@color/moonDark"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/sunriseImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/sunrise"
            android:contentDescription="@string/sunRise"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/twilightM_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultTextSize"
                android:text="@string/twilightM"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/twilightM_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/twilightM_caption"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="18:50"/>

            <TextView
                android:id="@+id/sunrise_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/twilightM_value"
                android:textSize="@dimen/defaultTextSize"
                android:padding="10dp"
                android:text="@string/sunRise"
                android:textAlignment="center"
                android:textColor="@color/colorSunset"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sunrise_caption"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="18:24 "/>

            <TextView
                android:id="@+id/azimuthSunrise_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultTextSize"
                android:layout_below="@id/sunrise_value"
                android:text="@string/azimuthTitle"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/azimuthSunrise_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/azimuthSunrise_caption"
                android:textAlignment="center"

                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="34deg"/>


        </RelativeLayout>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/sunsetImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:contentDescription="@string/sunSet"
            android:layout_marginBottom="10dp"
            android:src="@drawable/sunset"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/sunset_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text="@string/sunSet"
                android:textAlignment="center"
                android:textColor="@color/colorSunset"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sunset_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sunset_caption"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="18:24 "/>
            <TextView
                android:id="@+id/azimuthSunset_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultTextSize"
                android:layout_below="@id/sunset_value"
                android:padding="10dp"
                android:text="@string/azimuthTitle"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/azimuthSunset_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/azimuthSunset_caption"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="464deg "/>

            <TextView
                android:id="@+id/twilightE_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/azimuthSunset_value"
                android:textSize="@dimen/defaultTextSize"
                android:padding="10dp"
                android:text="@string/twilightE"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/twilightE_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/twilightE_caption"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/defaultTextSize"
                tools:text="18:50"/>
        </RelativeLayout>
    </TableRow>
</TableLayout>
